# claude-practices

./: .claudecodeignore  .env.example  .gitignore  CLAUDE.md  COPIN_DESIGN_GUIDELINE.md  DESIGN_GUIDELINE.md  Dockerfile  FRESH_DEPOSIT_STRATEGY.md  INSIDER_DETECTION_STRATEGIES.md  README.md  README.vi.md  docker-compose.yaml  nest-cli.json  package-lock.json  package.json  tsconfig.json
apps/momentum-bot/: .env.example  Dockerfile  Dockerfile.local  docker-compose.yml  pyproject.toml
apps/momentum-bot/config/: default.yaml
apps/momentum-bot/momentum-bot-blueprint/: CLAUDE.md  PROJECT-BLUEPRINT.md  SIGNAL-INPUTS-BRAINSTORM.md  SKILL.md  STRATEGY-CHEATSHEET.md
apps/momentum-bot/momentum-bot-blueprint/docs/: Momentum_Trading_Strategy_markdown_001-025_2030939598174482432.md  Momentum_Trading_Strategy_markdown_026-050_2030939674716344320.md  Momentum_Trading_Strategy_markdown_051-075_2030939695121625088.md  Momentum_Trading_Strategy_markdown_076-100_2030939535985541120.md  PLAN.md  STRATEGY.md
apps/momentum-bot/src/: __main__.py  config.py  main.py
apps/momentum-bot/src/alerts/: __init__.py  lark.py  telegram.py
apps/momentum-bot/src/data/: __init__.py  candle_bootstrap.py  candle_pipeline.py  candle_store.py  cvd_tracker.py  feeder.py  hl_info.py  market_scanner.py  orderbook.py  screener.py
apps/momentum-bot/src/execution/: __init__.py  executor.py  position_mgr.py  risk_mgr.py
apps/momentum-bot/src/strategy/: __init__.py  models.py  regime.py  signal.py  staircase.py  swing_points.py  volume_trend.py
apps/momentum-bot/src/utils/: __init__.py  hl_helpers.py  (+3 more)
(+186 files in other folders)
